# DCPLib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Toolchain-mingw-w64-ubuntu.cmake  build.bat  build.sh  build_docker.sh  build_examples.sh  build_mingw.sh  clean.sh  run_example.sh  run_test.bat  wrapper.bat
.github/workflows/: cmake.yml
dissector/: dcp_dissector.lua
docker/: 1_redhat_ubi8.Dockerfile  1_redhat_ubi9.Dockerfile  1_rockylinux_8.Dockerfile  1_rockylinux_9.Dockerfile  1_ubuntu_18.04.Dockerfile  1_ubuntu_22.04.Dockerfile  2_build.Dockerfile  3_run_test.Dockerfile
example/master/: CMakeLists.txt  Example-Slave-Description.xml
example/master/src/: MasterModel.h
example/slave/: CMakeLists.txt
example/slave/src/: Slave.hpp
example/spring_damper_master/: CMakeLists.txt  MSD1-Slave-Description.xml  MSD2-Slave-Description.xml
example/spring_damper_master/src/: MasterModel.h
example/spring_damper_slave1/: CMakeLists.txt
example/spring_damper_slave1/src/: Slave.hpp
example/spring_damper_slave2/: CMakeLists.txt
example/spring_damper_slave2/src/: Slave.hpp
example/struc_param_master/: CMakeLists.txt  Readme.md  StrucParam-Slave-Description.xml
example/struc_param_master/src/: Main.cpp  MasterModel.h
example/struc_param_slave/: CMakeLists.txt
example/struc_param_slave/cmake/: FindASIO.cmake  FindZip.cmake
example/struc_param_slave/src/: Main.cpp  Slave.hpp
include/bluetooth/dcp/driver/bluetooth/rfcomm/: RfCommDriver.hpp
include/core/dcp/driver/: DcpDriver.hpp
include/core/dcp/helper/: DcpSlaveDescriptionHelper.hpp  Helper.hpp  LogHelper.hpp
include/core/dcp/log/: FilteredOstreamLog.hpp  OstreamLog.hpp
include/core/dcp/logic/: AbstractDcpManager.cpp  AbstractDcpManager.hpp  AbstractDcpManagerSlave.cpp  AbstractDcpManagerSlave.hpp  DCPSlaveErrorCodes.hpp  DcpManager.hpp  LogManager.hpp  Logable.hpp
include/core/dcp/model/: DcpBinary.hpp  DcpCallbackTypes.hpp  DcpString.hpp  DcpTypes.hpp  LogEntry.hpp  LogTemplate.hpp  MultiDimValue.cpp  MultiDimValue.hpp
include/core/dcp/model/constant/: DcpDataType.hpp  DcpError.hpp  DcpLogLevel.hpp  DcpLogMode.hpp  DcpOpMode.hpp  DcpPduType.hpp  DcpScope.hpp  DcpState.hpp  DcpTransportProtocol.hpp
include/core/dcp/model/pdu/: DcpPdu.hpp  DcpPduBasic.hpp  DcpPduCfgInput.hpp  DcpPduCfgLogging.hpp  DcpPduCfgNetworkInformation.hpp  DcpPduCfgOutput.hpp  DcpPduCfgParamNetworkInformation.hpp  DcpPduCfgParameter.hpp  DcpPduCfgScope.hpp  DcpPduCfgSteps.hpp  DcpPduCfgTimeRes.hpp  DcpPduCfgTunableParameter.hpp  DcpPduDatInputOutput.hpp  DcpPduDatParameter.hpp  DcpPduFactory.cpp  DcpPduFactory.hpp  DcpPduInfLog.hpp  DcpPduNtfLog.hpp  DcpPduNtfStateChanged.hpp  DcpPduRspAck.hpp  DcpPduRspErrorAck.hpp  DcpPduRspLogAck.hpp  DcpPduRspNack.hpp  DcpPduRspStateAck.hpp  DcpPduStc.hpp  DcpPduStcDoStep.hpp  DcpPduStcRegister.hpp  DcpPduStcRun.hpp  IpToStr.hpp
include/core/dcp/xml/: DcpSlaveDescriptionElements.cpp  DcpSlaveDescriptionElements.hpp
include/ethernet/dcp/driver/ethernet/: ErrorCodes.hpp
include/ethernet/dcp/driver/ethernet/tcp/: TcpDriver.hpp
include/ethernet/dcp/driver/ethernet/tcp/helper/: TcpHelper.hpp
include/ethernet/dcp/driver/ethernet/udp/: UdpDriver.cpp  UdpDriver.hpp
include/ethernet/dcp/driver/ethernet/udp/helper/: UdpHelper.cpp  UdpHelper.hpp
include/master/dcp/logic/: DcpManagerMaster.cpp  DcpManagerMaster.hpp
include/slave/dcp/logic/: DcpManagerSlave.cpp  DcpManagerSlave.hpp
include/xml/dcp/xml/: DcpSlaveDescriptionReader.cpp  DcpSlaveDescriptionReader.hpp  DcpSlaveDescriptionWriter.cpp  DcpSlaveDescriptionWriter.hpp  XSD.hpp
include/zip/dcp/zip/: DcpSlaveReader.hpp  DcpSlaveWriter.hpp
src/test/: BasicChecks.cpp
